crates/test-files/fixtures/compile_errors/call_non_pub_fn_on_struct2.fe
struct Foo {
    fn do_private_thingz(self) {
    }
}

contract Bar {
    fn test() {
        Foo().do_private_thingz()
    }
}
